link section width fix on mobile

--- a/styles/sass/partials/_home.scss
+++ b/styles/sass/partials/_home.scss
@@ -429,6 +429,10 @@
     .aboutSection {
         padding: 40px 0;
     }
+
+    .linkContainer {
+        width: 100%;
+    }
         
     .linkContainer .linkTextContainer {
         flex-basis: 80%;
